--- a/Samples/Auth/VKAuth.dproj
+++ b/Samples/Auth/VKAuth.dproj
@@ -117,6 +117,7 @@
         <DCCReference Include="..\..\Entity\VK.Account.ActiveOffers.pas"/>
         <DCCReference Include="..\..\Entity\VK.Account.Counters.pas"/>
         <DCCReference Include="..\..\Entity\VK.Account.PushSettings.pas"/>
+        <DCCReference Include="..\..\VK.Structs.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
