--- a/VKComponents.dproj
+++ b/VKComponents.dproj
@@ -180,13 +180,17 @@
         <DCCReference Include="VK.Entity.pas"/>
         <DCCReference Include="VK.Handler.pas"/>
         <DCCReference Include="VK.Types.pas"/>
-        <DCCReference Include="Entity\VK.Account.Info.pas"/>
-        <DCCReference Include="Entity\VK.Account.pas"/>
         <DCCReference Include="Forms\VK.Captcha.pas">
             <Form>FormCaptcha</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="Entity\VK.Account.ActiveOffers.pas"/>
+        <DCCReference Include="Entity\VK.Account.Counters.pas"/>
+        <DCCReference Include="Entity\VK.Account.Info.pas"/>
+        <DCCReference Include="Entity\VK.Account.pas"/>
         <DCCReference Include="Entity\VK.Account.ProfileInfo.pas"/>
+        <DCCReference Include="Entity\VK.Account.PushSettings.pas"/>
+        <DCCReference Include="VK.Structs.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
