--- a/Samples/Auth/VKAuth.dproj
+++ b/Samples/Auth/VKAuth.dproj
@@ -118,6 +118,9 @@
         <DCCReference Include="..\..\Entity\VK.Account.Counters.pas"/>
         <DCCReference Include="..\..\Entity\VK.Account.PushSettings.pas"/>
         <DCCReference Include="..\..\VK.Structs.pas"/>
+        <DCCReference Include="..\..\Entity\VK.Auth.pas"/>
+        <DCCReference Include="..\..\Entity\VK.Users.pas"/>
+        <DCCReference Include="..\..\Entity\VK.Users.Types.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
