--- a/VKComponents.dproj
+++ b/VKComponents.dproj
@@ -170,7 +170,6 @@
         <DCCReference Include="RESTComponents.dcp"/>
         <DCCReference Include="vclimg.dcp"/>
         <DCCReference Include="PngComponents.dcp"/>
-        <DCCReference Include="HGMComponents.dcp"/>
         <DCCReference Include="VK.Components.pas"/>
         <DCCReference Include="VK.API.pas"/>
         <DCCReference Include="VK.OAuth2.pas">
@@ -191,6 +190,10 @@
         <DCCReference Include="Entity\VK.Account.ProfileInfo.pas"/>
         <DCCReference Include="Entity\VK.Account.PushSettings.pas"/>
         <DCCReference Include="VK.Structs.pas"/>
+        <DCCReference Include="Entity\VK.Auth.pas"/>
+        <DCCReference Include="Entity\VK.Users.pas"/>
+        <DCCReference Include="Entity\VK.Users.Types.pas"/>
+        <DCCReference Include="VK.Utils.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
