--- a/Samples/Auth/VKAuth.dproj
+++ b/Samples/Auth/VKAuth.dproj
@@ -131,7 +131,10 @@
         <DCCReference Include="..\..\Controllers\VK.Auth.pas"/>
         <DCCReference Include="..\..\Controllers\VK.Users.pas"/>
         <DCCReference Include="..\..\Controllers\VK.Messages.pas"/>
+        <DCCReference Include="..\..\Entity\VK.Entity.Keyboard.pas"/>
         <None Include="app_cred.inc"/>
+        <None Include="vk_admin.inc"/>
+        <None Include="delphi_live.inc"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
@@ -154,13 +157,25 @@
                 </Source>
             </Delphi.Personality>
             <Deployment Version="3">
+                <DeployFile LocalName="app_cred.inc" Configuration="Debug" Class="ProjectFile">
+                    <Platform Name="Win32">
+                        <RemoteDir>.\</RemoteDir>
+                        <Overwrite>true</Overwrite>
+                    </Platform>
+                </DeployFile>
                 <DeployFile LocalName="Win32\Debug\VKAuth.exe" Configuration="Debug" Class="ProjectOutput">
                     <Platform Name="Win32">
                         <RemoteName>VKAuth.exe</RemoteName>
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
-                <DeployFile LocalName="access.inc" Configuration="Debug" Class="ProjectFile">
+                <DeployFile LocalName="vk_admin.inc" Configuration="Debug" Class="ProjectFile">
+                    <Platform Name="Win32">
+                        <RemoteDir>.\</RemoteDir>
+                        <Overwrite>true</Overwrite>
+                    </Platform>
+                </DeployFile>
+                <DeployFile LocalName="delphi_live.inc" Configuration="Debug" Class="ProjectFile">
                     <Platform Name="Win32">
                         <RemoteDir>.\</RemoteDir>
                         <Overwrite>true</Overwrite>
