--- a/VKComponents.dproj
+++ b/VKComponents.dproj
@@ -203,6 +203,7 @@
         <DCCReference Include="Controllers\VK.Account.pas"/>
         <DCCReference Include="Controllers\VK.Auth.pas"/>
         <DCCReference Include="Controllers\VK.Users.pas"/>
+        <DCCReference Include="Controllers\VK.Messages.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
