--- a/Samples/Auth/VKAuth.dproj
+++ b/Samples/Auth/VKAuth.dproj
@@ -126,7 +126,7 @@
         <DCCReference Include="..\..\Entity\VK.Entity.Photo.pas"/>
         <DCCReference Include="..\..\Entity\VK.Entity.Common.pas"/>
         <DCCReference Include="..\..\Entity\VK.Entity.Link.pas"/>
-        <DCCReference Include="..\..\Entity\VK.Entity.Attachment.pas"/>
+        <DCCReference Include="..\..\Entity\VK.Entity.Media.pas"/>
         <DCCReference Include="..\..\Controllers\VK.Account.pas"/>
         <DCCReference Include="..\..\Controllers\VK.Auth.pas"/>
         <DCCReference Include="..\..\Controllers\VK.Users.pas"/>
@@ -138,9 +138,17 @@
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="..\..\VK.Utils.pas"/>
+        <DCCReference Include="..\..\Entity\VK.Entity.AudioMessage.pas"/>
+        <DCCReference Include="..\..\Entity\VK.Entity.Sticker.pas"/>
+        <DCCReference Include="..\..\Entity\VK.Entity.Gift.pas"/>
+        <DCCReference Include="..\..\Entity\VK.Entity.Market.pas"/>
+        <DCCReference Include="..\..\Entity\VK.Entity.Doc.pas"/>
+        <DCCReference Include="..\..\Entity\VK.Entity.Audio.pas"/>
+        <DCCReference Include="..\..\Entity\VK.Entity.Video.pas"/>
         <None Include="app_cred.inc"/>
         <None Include="vk_admin.inc"/>
         <None Include="delphi_live.inc"/>
+        <None Include="..\..\include.inc"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
@@ -182,6 +190,12 @@
                     </Platform>
                 </DeployFile>
                 <DeployFile LocalName="delphi_live.inc" Configuration="Debug" Class="ProjectFile">
+                    <Platform Name="Win32">
+                        <RemoteDir>.\</RemoteDir>
+                        <Overwrite>true</Overwrite>
+                    </Platform>
+                </DeployFile>
+                <DeployFile LocalName="..\..\include.inc" Configuration="Debug" Class="ProjectFile">
                     <Platform Name="Win32">
                         <RemoteDir>.\</RemoteDir>
                         <Overwrite>true</Overwrite>
