--- a/VKComponents.dproj
+++ b/VKComponents.dproj
@@ -143,32 +143,45 @@
         <DCCReference Include="Forms\VK.Captcha.pas">
             <Form>FormCaptcha</Form>
         </DCCReference>
-        <DCCReference Include="Entity\VK.Entity.Counters.pas"/>
-        <DCCReference Include="Entity\VK.Entity.AccountInfo.pas"/>
-        <DCCReference Include="Entity\VK.Entity.ProfileInfo.pas"/>
-        <DCCReference Include="Entity\VK.Entity.PushSettings.pas"/>
         <DCCReference Include="VK.Structs.pas"/>
         <DCCReference Include="VK.Utils.pas"/>
         <DCCReference Include="VK.LongPollServer.pas"/>
         <DCCReference Include="VK.UserEvents.pas"/>
         <DCCReference Include="VK.GroupEvents.pas"/>
-        <DCCReference Include="Entity\VK.Entity.ActiveOffers.pas"/>
-        <DCCReference Include="Entity\VK.Entity.Media.pas"/>
-        <DCCReference Include="Entity\VK.Entity.Comment.pas"/>
-        <DCCReference Include="Entity\VK.Entity.Common.pas"/>
-        <DCCReference Include="Entity\VK.Entity.Link.pas"/>
-        <DCCReference Include="Entity\VK.Entity.Photo.pas"/>
-        <DCCReference Include="Entity\VK.Entity.Post.pas"/>
-        <DCCReference Include="Entity\VK.Entity.User.pas"/>
-        <DCCReference Include="Controllers\VK.Account.pas"/>
-        <DCCReference Include="Controllers\VK.Auth.pas"/>
-        <DCCReference Include="Controllers\VK.Users.pas"/>
-        <DCCReference Include="Controllers\VK.Messages.pas"/>
         <DCCReference Include="Forms\VK.OAuth2.pas">
             <Form>FormOAuth2</Form>
         </DCCReference>
-        <DCCReference Include="Entity\VK.Entity.Message.pas"/>
+        <DCCReference Include="Entity\VK.Entity.AccountInfo.pas"/>
+        <DCCReference Include="Entity\VK.Entity.ActiveOffers.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Audio.pas"/>
+        <DCCReference Include="Entity\VK.Entity.AudioMessage.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Comment.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Common.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Counters.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Doc.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Doc.Save.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Gift.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Graffiti.pas"/>
         <DCCReference Include="Entity\VK.Entity.Keyboard.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Link.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Market.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Media.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Message.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Photo.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Post.pas"/>
+        <DCCReference Include="Entity\VK.Entity.ProfileInfo.pas"/>
+        <DCCReference Include="Entity\VK.Entity.PushSettings.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Sticker.pas"/>
+        <DCCReference Include="Entity\VK.Entity.User.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Video.pas"/>
+        <DCCReference Include="VK.Uploader.pas"/>
+        <DCCReference Include="Controllers\VK.Account.pas"/>
+        <DCCReference Include="Controllers\VK.Auth.pas"/>
+        <DCCReference Include="Controllers\VK.Docs.pas"/>
+        <DCCReference Include="Controllers\VK.Messages.pas"/>
+        <DCCReference Include="Controllers\VK.Status.pas"/>
+        <DCCReference Include="Controllers\VK.Users.pas"/>
+        <DCCReference Include="Controllers\VK.Wall.pas"/>
         <None Include="include.inc"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
