--- a/VKComponents.dproj
+++ b/VKComponents.dproj
@@ -151,29 +151,6 @@
         <DCCReference Include="Forms\VK.OAuth2.pas">
             <Form>FormOAuth2</Form>
         </DCCReference>
-        <DCCReference Include="Entity\VK.Entity.AccountInfo.pas"/>
-        <DCCReference Include="Entity\VK.Entity.ActiveOffers.pas"/>
-        <DCCReference Include="Entity\VK.Entity.Audio.pas"/>
-        <DCCReference Include="Entity\VK.Entity.AudioMessage.pas"/>
-        <DCCReference Include="Entity\VK.Entity.Comment.pas"/>
-        <DCCReference Include="Entity\VK.Entity.Common.pas"/>
-        <DCCReference Include="Entity\VK.Entity.Counters.pas"/>
-        <DCCReference Include="Entity\VK.Entity.Doc.pas"/>
-        <DCCReference Include="Entity\VK.Entity.Doc.Save.pas"/>
-        <DCCReference Include="Entity\VK.Entity.Gift.pas"/>
-        <DCCReference Include="Entity\VK.Entity.Graffiti.pas"/>
-        <DCCReference Include="Entity\VK.Entity.Keyboard.pas"/>
-        <DCCReference Include="Entity\VK.Entity.Link.pas"/>
-        <DCCReference Include="Entity\VK.Entity.Market.pas"/>
-        <DCCReference Include="Entity\VK.Entity.Media.pas"/>
-        <DCCReference Include="Entity\VK.Entity.Message.pas"/>
-        <DCCReference Include="Entity\VK.Entity.Photo.pas"/>
-        <DCCReference Include="Entity\VK.Entity.Post.pas"/>
-        <DCCReference Include="Entity\VK.Entity.ProfileInfo.pas"/>
-        <DCCReference Include="Entity\VK.Entity.PushSettings.pas"/>
-        <DCCReference Include="Entity\VK.Entity.Sticker.pas"/>
-        <DCCReference Include="Entity\VK.Entity.User.pas"/>
-        <DCCReference Include="Entity\VK.Entity.Video.pas"/>
         <DCCReference Include="VK.Uploader.pas"/>
         <DCCReference Include="Controllers\VK.Account.pas"/>
         <DCCReference Include="Controllers\VK.Auth.pas"/>
@@ -182,6 +159,35 @@
         <DCCReference Include="Controllers\VK.Status.pas"/>
         <DCCReference Include="Controllers\VK.Users.pas"/>
         <DCCReference Include="Controllers\VK.Wall.pas"/>
+        <DCCReference Include="Entity\VK.Entity.AccountInfo.pas"/>
+        <DCCReference Include="Entity\VK.Entity.ActiveOffers.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Album.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Audio.pas"/>
+        <DCCReference Include="Entity\VK.Entity.AudioMessage.pas"/>
+        <DCCReference Include="Entity\VK.Entity.ClientInfo.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Common.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Counters.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Doc.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Doc.Save.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Event.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Gift.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Graffiti.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Keyboard.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Link.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Market.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Media.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Message.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Note.pas"/>
+        <DCCReference Include="Entity\VK.Entity.OldApp.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Page.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Photo.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Poll.pas"/>
+        <DCCReference Include="Entity\VK.Entity.PrettyCard.pas"/>
+        <DCCReference Include="Entity\VK.Entity.ProfileInfo.pas"/>
+        <DCCReference Include="Entity\VK.Entity.PushSettings.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Sticker.pas"/>
+        <DCCReference Include="Entity\VK.Entity.User.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Video.pas"/>
         <None Include="include.inc"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
