--- a/Samples/Auth/VKAuth.dproj
+++ b/Samples/Auth/VKAuth.dproj
@@ -157,6 +157,8 @@
         <DCCReference Include="..\..\Entity\VK.Entity.Sticker.pas"/>
         <DCCReference Include="..\..\Entity\VK.Entity.User.pas"/>
         <DCCReference Include="..\..\Entity\VK.Entity.Video.pas"/>
+        <DCCReference Include="..\..\Entity\VK.Entity.GroupSettings.pas"/>
+        <DCCReference Include="..\..\Controllers\VK.Likes.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
