--- a/Samples/Auth/VKAuth.dproj
+++ b/Samples/Auth/VKAuth.dproj
@@ -161,6 +161,8 @@
         <DCCReference Include="..\..\Controllers\VK.Audio.pas"/>
         <DCCReference Include="..\..\Entity\VK.Entity.AccountInfoRequest.pas"/>
         <DCCReference Include="..\..\Controllers\VK.Board.pas"/>
+        <DCCReference Include="..\..\Entity\VK.Entity.Playlist.pas"/>
+        <DCCReference Include="..\..\Controllers\VK.Groups.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
