--- a/Samples/Auth/VKAuth.dproj
+++ b/Samples/Auth/VKAuth.dproj
@@ -114,20 +114,27 @@
         <DCCReference Include="..\..\VK.LongPollServer.pas"/>
         <DCCReference Include="..\..\VK.UserEvents.pas"/>
         <DCCReference Include="..\..\VK.GroupEvents.pas"/>
-        <DCCReference Include="..\..\Controllers\VK.Account.pas"/>
-        <DCCReference Include="..\..\Controllers\VK.Auth.pas"/>
-        <DCCReference Include="..\..\Controllers\VK.Users.pas"/>
-        <DCCReference Include="..\..\Controllers\VK.Messages.pas"/>
         <DCCReference Include="..\..\Forms\VK.OAuth2.pas">
             <Form>FormOAuth2</Form>
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="..\..\VK.Utils.pas"/>
-        <DCCReference Include="..\..\Controllers\VK.Status.pas"/>
-        <DCCReference Include="..\..\Controllers\VK.Wall.pas"/>
-        <DCCReference Include="..\..\Controllers\VK.Docs.pas"/>
         <DCCReference Include="..\..\VK.Uploader.pas"/>
+        <DCCReference Include="..\..\Controllers\VK.Account.pas"/>
+        <DCCReference Include="..\..\Controllers\VK.Audio.pas"/>
+        <DCCReference Include="..\..\Controllers\VK.Auth.pas"/>
+        <DCCReference Include="..\..\Controllers\VK.Board.pas"/>
+        <DCCReference Include="..\..\Controllers\VK.Docs.pas"/>
+        <DCCReference Include="..\..\Controllers\VK.Friends.pas"/>
+        <DCCReference Include="..\..\Controllers\VK.Groups.pas"/>
+        <DCCReference Include="..\..\Controllers\VK.Likes.pas"/>
+        <DCCReference Include="..\..\Controllers\VK.Messages.pas"/>
+        <DCCReference Include="..\..\Controllers\VK.Photos.pas"/>
+        <DCCReference Include="..\..\Controllers\VK.Status.pas"/>
+        <DCCReference Include="..\..\Controllers\VK.Users.pas"/>
+        <DCCReference Include="..\..\Controllers\VK.Wall.pas"/>
         <DCCReference Include="..\..\Entity\VK.Entity.AccountInfo.pas"/>
+        <DCCReference Include="..\..\Entity\VK.Entity.AccountInfoRequest.pas"/>
         <DCCReference Include="..\..\Entity\VK.Entity.ActiveOffers.pas"/>
         <DCCReference Include="..\..\Entity\VK.Entity.Album.pas"/>
         <DCCReference Include="..\..\Entity\VK.Entity.Audio.pas"/>
@@ -140,6 +147,7 @@
         <DCCReference Include="..\..\Entity\VK.Entity.Event.pas"/>
         <DCCReference Include="..\..\Entity\VK.Entity.Gift.pas"/>
         <DCCReference Include="..\..\Entity\VK.Entity.Graffiti.pas"/>
+        <DCCReference Include="..\..\Entity\VK.Entity.GroupSettings.pas"/>
         <DCCReference Include="..\..\Entity\VK.Entity.Keyboard.pas"/>
         <DCCReference Include="..\..\Entity\VK.Entity.Link.pas"/>
         <DCCReference Include="..\..\Entity\VK.Entity.Market.pas"/>
@@ -149,6 +157,8 @@
         <DCCReference Include="..\..\Entity\VK.Entity.OldApp.pas"/>
         <DCCReference Include="..\..\Entity\VK.Entity.Page.pas"/>
         <DCCReference Include="..\..\Entity\VK.Entity.Photo.pas"/>
+        <DCCReference Include="..\..\Entity\VK.Entity.Photo.Upload.pas"/>
+        <DCCReference Include="..\..\Entity\VK.Entity.Playlist.pas"/>
         <DCCReference Include="..\..\Entity\VK.Entity.Poll.pas"/>
         <DCCReference Include="..\..\Entity\VK.Entity.PrettyCard.pas"/>
         <DCCReference Include="..\..\Entity\VK.Entity.ProfileInfo.pas"/>
@@ -156,13 +166,7 @@
         <DCCReference Include="..\..\Entity\VK.Entity.Sticker.pas"/>
         <DCCReference Include="..\..\Entity\VK.Entity.User.pas"/>
         <DCCReference Include="..\..\Entity\VK.Entity.Video.pas"/>
-        <DCCReference Include="..\..\Entity\VK.Entity.GroupSettings.pas"/>
-        <DCCReference Include="..\..\Controllers\VK.Likes.pas"/>
-        <DCCReference Include="..\..\Controllers\VK.Audio.pas"/>
-        <DCCReference Include="..\..\Entity\VK.Entity.AccountInfoRequest.pas"/>
-        <DCCReference Include="..\..\Controllers\VK.Board.pas"/>
-        <DCCReference Include="..\..\Entity\VK.Entity.Playlist.pas"/>
-        <DCCReference Include="..\..\Controllers\VK.Groups.pas"/>
+        <DCCReference Include="..\..\Entity\VK.Entity.Audio.Upload.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
