--- a/VKComponents.dproj
+++ b/VKComponents.dproj
@@ -162,6 +162,19 @@
         <DCCReference Include="Utils\pbPublic.pas"/>
         <DCCReference Include="Utils\StrBuffer.pas"/>
         <DCCReference Include="Utils\uAbstractProtoBufClasses.pas"/>
+        <DCCReference Include="Controllers\VK.Account.pas"/>
+        <DCCReference Include="Controllers\VK.Audio.pas"/>
+        <DCCReference Include="Controllers\VK.Auth.pas"/>
+        <DCCReference Include="Controllers\VK.Board.pas"/>
+        <DCCReference Include="Controllers\VK.Docs.pas"/>
+        <DCCReference Include="Controllers\VK.Friends.pas"/>
+        <DCCReference Include="Controllers\VK.Groups.pas"/>
+        <DCCReference Include="Controllers\VK.Likes.pas"/>
+        <DCCReference Include="Controllers\VK.Messages.pas"/>
+        <DCCReference Include="Controllers\VK.Photos.pas"/>
+        <DCCReference Include="Controllers\VK.Status.pas"/>
+        <DCCReference Include="Controllers\VK.Users.pas"/>
+        <DCCReference Include="Controllers\VK.Wall.pas"/>
         <DCCReference Include="Entity\VK.Entity.AccountInfo.pas"/>
         <DCCReference Include="Entity\VK.Entity.AccountInfoRequest.pas"/>
         <DCCReference Include="Entity\VK.Entity.ActiveOffers.pas"/>
@@ -171,12 +184,14 @@
         <DCCReference Include="Entity\VK.Entity.AudioMessage.pas"/>
         <DCCReference Include="Entity\VK.Entity.ClientInfo.pas"/>
         <DCCReference Include="Entity\VK.Entity.Common.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Conversation.pas"/>
         <DCCReference Include="Entity\VK.Entity.Counters.pas"/>
         <DCCReference Include="Entity\VK.Entity.Doc.pas"/>
         <DCCReference Include="Entity\VK.Entity.Doc.Save.pas"/>
         <DCCReference Include="Entity\VK.Entity.Event.pas"/>
         <DCCReference Include="Entity\VK.Entity.Gift.pas"/>
         <DCCReference Include="Entity\VK.Entity.Graffiti.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Group.pas"/>
         <DCCReference Include="Entity\VK.Entity.GroupSettings.pas"/>
         <DCCReference Include="Entity\VK.Entity.Keyboard.pas"/>
         <DCCReference Include="Entity\VK.Entity.Link.pas"/>
@@ -193,22 +208,10 @@
         <DCCReference Include="Entity\VK.Entity.PrettyCard.pas"/>
         <DCCReference Include="Entity\VK.Entity.ProfileInfo.pas"/>
         <DCCReference Include="Entity\VK.Entity.PushSettings.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Status.pas"/>
         <DCCReference Include="Entity\VK.Entity.Sticker.pas"/>
         <DCCReference Include="Entity\VK.Entity.User.pas"/>
         <DCCReference Include="Entity\VK.Entity.Video.pas"/>
-        <DCCReference Include="Controllers\VK.Account.pas"/>
-        <DCCReference Include="Controllers\VK.Audio.pas"/>
-        <DCCReference Include="Controllers\VK.Auth.pas"/>
-        <DCCReference Include="Controllers\VK.Board.pas"/>
-        <DCCReference Include="Controllers\VK.Docs.pas"/>
-        <DCCReference Include="Controllers\VK.Friends.pas"/>
-        <DCCReference Include="Controllers\VK.Groups.pas"/>
-        <DCCReference Include="Controllers\VK.Likes.pas"/>
-        <DCCReference Include="Controllers\VK.Messages.pas"/>
-        <DCCReference Include="Controllers\VK.Photos.pas"/>
-        <DCCReference Include="Controllers\VK.Status.pas"/>
-        <DCCReference Include="Controllers\VK.Users.pas"/>
-        <DCCReference Include="Controllers\VK.Wall.pas"/>
         <None Include="include.inc"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
